--- a/src/components/Layout/style/Header.css
+++ b/src/components/Layout/style/Header.css
@@ -1,7 +1,8 @@
-.header {
-	background-image: url(/assets/images/header-bg.png);
-	background-repeat: no-repeat;
+.header_home {
+	background: #fff url(/assets/images/header-bg.png) no-repeat top right;
 	background-size: 50% 100%;
-	background-position: top right;
-	background-color: #222362;
+}
+.header {
+	background: #222362 url(/assets/images/header-bg.png) no-repeat top right;
+	background-size: 50% 100%;
 }
