Change: all css files change scss and group in one file

--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -1,12 +1,14 @@
+$root-fff: #fff;
+
 .btn-linkedin {
-	color: #fff;
+	color: $root-fff;
 	background-color: #0077b5;
 	border: 1px solid #0077b5;
 	border-radius: 25px;
 }
 .btn-linkedin:hover {
 	color: #0077b5;
-	background-color: #fff;
+	background-color: $root-fff;
 	border: 1px solid #0077b5;
 	border-radius: 25px;
 }
