--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,28 @@
+@import '~~bootstrap/dist/css/bootstrap.min.css';
+@import "../src/components/GlobalStyles/colors";
+@import "../src/components/GlobalStyles/fonts";
+@import "../src/components/GlobalStyles/variables";
+@import "../src/components/Buttons/Buttons.scss";
+@import "../src/components/Layout/style/Header.scss";
+@import "../src/components/Layout/style/Navigation.scss";
+@import "../src/components/SocIcons/SocIcons.scss";
+@import "../src/components/Views/About/About.scss";
+@import "../src/components/Views/Contacts/Contacts.scss";
+@import "../src/components/Views/Education/Education.scss";
+@import "../src/components/Views/Experience/Experience.scss";
+@import "../src/components/Views/Portfolio/Portfolio.scss";
+@import "../src/components/Views/Skills/Skills.scss";
+@import "../src/App.scss";
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+		"Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
